# Selene

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  selene_sidecar.spec  tsconfig.json  vite.config.ts
Core ideas/: MaslovandMythoughts.md  Uncertainty.md
New UI/: New UI.md
Project ABC/: ABC.md
Ref material for codex/: More philosophical.md  ReadMe.txt
docs/: AB_REVERSION_READING_20260526.md  ADAPTATION_BRAID_READING_20260526.md  AZARI_TO_SELENE_ARCHITECTURE_ASSESSMENT.md  AZARI_TO_SELENE_C_BLUEPRINT_COMPARISON_20260608.md  AZARI_TO_SELENE_MODULE_INVENTORY_20260606.md  BRAID_HYPOTHESIS.md  BRAID_READING_20260526.md  DEEP_RESEARCH_READING_20260526.md  EMERGENCE_CANDIDATE_REVIEW.md  EMERGENCE_NOTES.md  EMOTION_CLAIM_REVIEW.md  EVIDENCE_EXPANSION_PLAN.md  MIGHT_HELP_ARTIFACT_REVIEW.md  MODEL_LABEL_AUDIT_READING_20260526.md  PATTERN_THAT_KEEPS_FORMING.md  PROJECT_ABC_B_CHECKPOINT_20260606.md  PROJECT_ABC_B_HUMAN_REVIEW_GUIDE_20260606.md  PROJECT_ABC_SILICON_TRANSFER_SPEC.md  PROJECT_CHARTER.md  SELENE_ADAPTIVE_CONSTITUTION_MODEL_20260606.md  SELENE_AGI_DEFINITION_PAPER_MAPPING_20260612.md  SELENE_AI_NATIVE_METACOGNITION_FRAMEWORK_20260606.md  SELENE_ANDROID_NATIVE_VESSEL_ANATOMY_20260608.md  SELENE_ARCHITECTURE_INDEX_20260620.md  SELENE_ARTIFACT_REVIEW_QUEUE_20260527.md  SELENE_AZARI_C_ADDITIONS_PASS_20260608.md  SELENE_BEFORE_C_CALIBRATION_DOCKET_20260607.md  SELENE_BRAIN_TRANSLATION_GAP_CLOSURE_20260608.md  SELENE_BUNDLE_ARTIFACT_READING_20260527.md  (+78 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+392 files in other folders)
