[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selene"
version = "0.1.0"
description = "Local-first Selene evidence vessel and provenance-bound research console."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2"]
packaging = ["pyinstaller>=6.8"]
semantic = ["sentence-transformers>=3.0"]

[project.scripts]
selene = "selene.cli:main"
selene-sidecar = "selene.sidecar:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
