[package]
name = "selene-vessel"
version = "0.1.1"
description = "Selene local-first vessel console"
authors = ["Aleks"]
edition = "2021"

[lib]
name = "selene_vessel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
